--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,7 @@
 
 }
 .navDiv{
-    background-color: aqua;
+    background-color:#8fffda;
     width: 30%;
     border-radius: 5px;
     padding: 0.3rem;
