--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,4 +1,11 @@
-.texto{
-    font-size: 2rem;
-    margin: 2rem;
+.divContador{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:#e0e0e0 ;
+    width: 50%;
+    margin: 1rem auto;
+}
+.botonContador{
+    margin: 1rem;
 }
