--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,17 +1,10 @@
-.article{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-area: article;
-    height: 100%;
-    grid-gap: 1rem;
-}
-/* .article2{
+.article2{
     display: grid;
     grid-template-areas:
         "aside article article"
         "aside article article";
     grid-template-columns: 13rem 1fr;
     column-gap: 1rem;
-    padding: 4rem;
+    padding: 1rem;
     background: rgb(238, 238, 238);
-} */
+}
