--- a/src/components/CarritoListProductos/CarritoListProductos.css
+++ b/src/components/CarritoListProductos/CarritoListProductos.css
@@ -1,23 +1,49 @@
+.tituloCarrito {
+    font-size: 2rem;
+}
+
 .divBotonVaciarCarrito {
     display: flex;
     justify-content: flex-end;
-    margin: 0 2rem 0 0;
+    margin: 1rem;
 }
-.precioFinal{
+
+.hrCarrito {
+    width: 70%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+}
+
+.precioFinal {
     display: flex;
     justify-content: space-evenly;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+}
+
+.divSinProductosCarrito {
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+    margin: 0.5rem 1rem;
 }
 
 .divSinProductos {
     border-radius: 10px;
-    box-shadow: 0px 3px 7px rgb(0 0 0 / 9%);
+    box-shadow: 0px 3px 7px #92c800;
     background: white;
     width: 50%;
-    margin: 1rem;
+    margin: 5rem 0 10rem 0;
     padding: 1rem;
 }
-.divSinProductoscarrito{
-    display: flex;
-    justify-content: center;
+
+.textoSinProductosCarrito {
+    font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+    .imagenCarrito {
+        width: 5rem;
+    }
 }
