--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -73,7 +73,6 @@
         background: #fdfdfd;
         max-width: 500px;
         max-height: 500px;
-        min-height: 300px;
         margin: auto;
     }
 
@@ -81,8 +80,6 @@
         width: 90%;
         height: 100%;
         max-height: 500px;
-        min-width: 300px;
-        min-height: 300px;
     }
 
     .titiloProductoDetallado {
@@ -113,6 +110,13 @@
 }
 
 @media only screen and (max-width: 576px) {
+    .DivItemDetallado {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        height: 100%;
+        grid-gap: 2rem;
+        padding: 2rem;
+    }
     .article {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -127,6 +131,13 @@
 }
 
 @media only screen and (max-width: 425px) {
+    .DivItemDetallado {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        height: 100%;
+        grid-gap: 2rem;
+        padding: 2rem 1rem 1rem 1rem;
+    }
     .article {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
